--- a/includes/footer.pug
+++ b/includes/footer.pug
@@ -1,2 +1,7 @@
 footer 
-    h1 Footer
+    h1 Hello footer
+
+
+script(src="./js/main.js")
+script(src="./js/bootstrap.js")
+script(src="./js/bootstrap-bundle.js")
