--- a/html/css/style.css
+++ b/html/css/style.css
@@ -19,6 +19,11 @@ img {
 
 a {
   color: inherit;
+  text-decoration: none;
+}
+
+dl, ol, ul {
+  margin-bottom: auto !important;
 }
 
 button {
@@ -43,6 +48,94 @@ textarea[type=text]:focus {
   padding: 0 10px;
 }
 
+.header {
+  background: #FFF;
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1);
+}
+.header .main_container {
+  position: relative;
+  padding: 11px 10px 14px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header .nav_link {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.header .nav_item {
+  color: #757F88;
+  font-family: "Factor A", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.header .nav_item_left {
+  text-align: right;
+  max-width: 150px;
+}
+.header .nav_item_right {
+  text-align: left;
+  max-width: 150px;
+}
+.header .header_contact a {
+  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 7px;
+  width: 158px;
+  height: 37px;
+  border-radius: 30px;
+  color: #FFF;
+  font-family: "DIN Pro", sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  background-color: #FF5600;
+}
+.header .header_contact a img {
+  width: 18px;
+}
+.header .burger_btn {
+  background-color: transparent;
+  cursor: pointer;
+}
+.header .menu {
+  display: none;
+}
+
+@media only screen and (max-width: 768px) {
+  .header .main_container {
+    padding: 7px 10px;
+  }
+  .header .logo img {
+    width: 52px;
+  }
+  .header .nav_item_right,
+  .header .nav_item_left {
+    display: none;
+  }
+  .header .header_contact a {
+    width: 130px;
+    height: 30px;
+    font-size: 18px;
+  }
+  .header .header_contact a img {
+    width: 15px;
+  }
+  .header .burger_btn {
+    width: 28px;
+  }
+}
 h1 {
   color: red;
+}
+
+header {
+  background: red;
 }/*# sourceMappingURL=style.css.map */
