--- a/includes/head.pug
+++ b/includes/head.pug
@@ -2,5 +2,7 @@ head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Document
+    link(rel="stylesheet", href="./fonts/FactorA/stylesheet.css")
+    link(rel="stylesheet", href="./fonts/DINPro/stylesheet.css")
     link(rel="stylesheet", href="./css/bootstrap.css")
     link(rel="stylesheet", href="./css/style.css")
