--- a/html/css/parts/_main.scss
+++ b/html/css/parts/_main.scss
@@ -29,6 +29,10 @@ dl, ol, ul {
     margin-bottom: auto !important;
 }
 
+p {
+    margin-bottom: 0;
+}
+
 button {
     border: none;
     cursor: 00;
