--- a/html/css/parts/_header.scss
+++ b/html/css/parts/_header.scss
@@ -66,6 +66,48 @@
 
     .menu {
         display: none;
+        width: 300px;
+        position: absolute;
+        top: 100%;
+        right: 10px;
+        border-radius: 0px 0px 16px 16px;
+        background: #FFF;
+        box-shadow: 0px 4px 30px 0px #BFCEFF;
+        padding: 26px 16px 12px 30px;
+
+        .menu_close {
+            position: absolute;
+            right: 16px;
+            top: 23px;
+            background-color: transparent;
+        }
+
+        .menu_in {
+            li {
+                margin-bottom: 24px;
+
+                a {
+                    display: flex;
+                    align-items: center;
+                    gap: 13px;
+                    color: $main_text;
+                    font-family: $Factor;
+                    font-size: 20px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: normal;
+                    transition: .2s ease;
+
+                    &:hover {
+                        color: $main_text2;
+                    }
+                }
+            }
+        }
+    }
+
+    .menu.active {
+        display: block;
     }
 }
 
@@ -102,6 +144,17 @@
 
         .burger_btn {
             width: 28px;
+        }
+    }
+}
+
+@media only screen and (max-width: 365px) {
+    .header {
+        .main_container {
+            position: relative;
+            .menu {
+                width: 80%;
+            }
         }
     }
 }
