--- a/html/css/style.css
+++ b/html/css/style.css
@@ -27,6 +27,10 @@ dl, ol, ul {
   margin-bottom: auto !important;
 }
 
+p {
+  margin-bottom: 0;
+}
+
 button {
   border: none;
   cursor: 0;
@@ -108,6 +112,41 @@ textarea[type=text]:focus {
 }
 .header .menu {
   display: none;
+  width: 300px;
+  position: absolute;
+  top: 100%;
+  right: 10px;
+  border-radius: 0px 0px 16px 16px;
+  background: #FFF;
+  box-shadow: 0px 4px 30px 0px #BFCEFF;
+  padding: 26px 16px 12px 30px;
+}
+.header .menu .menu_close {
+  position: absolute;
+  right: 16px;
+  top: 23px;
+  background-color: transparent;
+}
+.header .menu .menu_in li {
+  margin-bottom: 24px;
+}
+.header .menu .menu_in li a {
+  display: flex;
+  align-items: center;
+  gap: 13px;
+  color: #0B1F33;
+  font-family: "Factor A", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  transition: 0.2s ease;
+}
+.header .menu .menu_in li a:hover {
+  color: #757F88;
+}
+.header .menu.active {
+  display: block;
 }
 
 @media only screen and (max-width: 768px) {
@@ -133,6 +172,14 @@ textarea[type=text]:focus {
     width: 28px;
   }
 }
+@media only screen and (max-width: 365px) {
+  .header .main_container {
+    position: relative;
+  }
+  .header .main_container .menu {
+    width: 80%;
+  }
+}
 h1 {
   color: red;
 }
@@ -142,6 +189,7 @@ header {
 }
 
 .footer {
+  border-top: 10px solid #C5D3FF;
   background-color: #082665;
   padding: 74px 0 61px 0;
 }
@@ -149,6 +197,8 @@ header {
   display: flex;
   align-items: start;
   justify-content: space-between;
+  margin-bottom: 85px;
+  gap: 15px;
 }
 .footer .main_container .footer_top_left {
   display: flex;
@@ -185,4 +235,87 @@ header {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+.footer .main_container .footer_top_right .download_app {
+  margin-bottom: 28px;
+}
+.footer .main_container .footer_top_right p {
+  margin-bottom: 34px;
+  color: #7789B5;
+  max-width: 240px;
+  font-family: "Factor A", sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 19px;
+}
+.footer .main_container .footer_top_right p span {
+  display: block;
+  color: #fff;
+}
+.footer .main_container .footer_bottom p {
+  color: #7789B5;
+  font-family: "Factor A", sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 25px;
+}
+
+@media only screen and (max-width: 768px) {
+  .footer {
+    padding: 20px 0 37px 0;
+  }
+  .footer .main_container .footer_top {
+    justify-content: center;
+    margin-bottom: 42px;
+  }
+  .footer .main_container .footer_top .footer_top_left .footer_left_in {
+    gap: 63px;
+  }
+  .footer .main_container .footer_top .footer_top_left .footer_left_in ul li {
+    margin-bottom: 14px;
+  }
+  .footer .main_container .footer_top .footer_top_left .footer_messenger {
+    margin-top: 13px;
+  }
+  .footer .main_container .footer_top .footer_top_center {
+    display: none;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .footer .main_container .footer_top {
+    gap: 0;
+    max-width: 220px;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+  .footer .main_container .footer_top_left ul li {
+    font-size: 12px;
+  }
+  .footer .main_container .footer_top_left .footer_messenger {
+    margin-bottom: 48px;
+    display: flex;
+    gap: 3px;
+    justify-content: center;
+  }
+  .footer .main_container .footer_top_right .download_app {
+    display: flex;
+    gap: 8px;
+    margin-bottom: 13px;
+  }
+  .footer .main_container .footer_top_right .download_app img {
+    width: 85px;
+  }
+  .footer .main_container .footer_top_right p {
+    font-size: 12px;
+    margin-bottom: 29px;
+  }
+  .footer .main_container .footer_top_right p span {
+    font-size: 12px;
+  }
+  .footer .main_container .footer_bottom p {
+    font-size: 12px;
+    margin-top: 13px;
+  }
 }/*# sourceMappingURL=style.css.map */
