--- a/html/css/style.scss
+++ b/html/css/style.scss
@@ -4,17 +4,74 @@
 @import './parts/vars';
 @import './parts/header';
 
-h1 {
-    color: red;
+
+
+
+#magazine_home {
+    background-image: url('../images/magazine_dektop_img.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    .breadcrumb {
+        padding-top: 26px;
+        padding-bottom: 45px;
+        ul {
+            li {
+                a, span {
+                    color: #B1B1B1;
+                    font-family: $Factor;
+                    font-size: 14px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: normal;
+                }
+            }
+        }
+    }
+
+    .main_container {
+        .magazine_home_in {
+            padding-bottom: 183px;
+            h1 {
+                max-width: 863px;
+                color: #FFF;
+                font-family: $Factor;
+                font-size: 40px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 53px;
+                padding-bottom: 21px;
+            }
+
+            .magazine_date {
+                margin-bottom: 21px;
+            }
+
+            p {
+                max-width: 939px;
+                color: rgba(255, 255, 255, 1);
+                font-family: Factor A;
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 27px; /* 168.75% */
+            }
+        }
+
+    }
 }
-
-header {
-    background: red;
+.magazine_text {
+    margin-top: 60px;
+    p {
+        color: #0B1F33;
+        font-family: $Factor;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 27px;
+        margin-bottom: 34px;
+    }
 }
-
-
-
-
 
 
 
