--- a/html/css/style.css
+++ b/html/css/style.css
@@ -180,12 +180,61 @@ textarea[type=text]:focus {
     width: 80%;
   }
 }
-h1 {
-  color: red;
+#magazine_home {
+  background-image: url("../images/magazine_dektop_img.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+#magazine_home .breadcrumb {
+  padding-top: 26px;
+  padding-bottom: 45px;
+}
+#magazine_home .breadcrumb ul li a, #magazine_home .breadcrumb ul li span {
+  color: #B1B1B1;
+  font-family: "Factor A", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+#magazine_home .main_container .magazine_home_in {
+  padding-bottom: 183px;
+}
+#magazine_home .main_container .magazine_home_in h1 {
+  max-width: 863px;
+  color: #FFF;
+  font-family: "Factor A", sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 53px;
+  padding-bottom: 21px;
+}
+#magazine_home .main_container .magazine_home_in .magazine_date {
+  margin-bottom: 21px;
+}
+#magazine_home .main_container .magazine_home_in p {
+  max-width: 939px;
+  color: rgb(255, 255, 255);
+  font-family: Factor A;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 27px; /* 168.75% */
 }
 
-header {
-  background: red;
+.magazine_text {
+  margin-top: 60px;
+}
+.magazine_text p {
+  color: #0B1F33;
+  font-family: "Factor A", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 27px;
+  margin-bottom: 34px;
 }
 
 .footer {
