--- a/html/css/parts/_media.scss
+++ b/html/css/parts/_media.scss
@@ -59,3 +59,100 @@
         }
     }
 }
+
+@media only screen and (max-width: 768px) {
+    #magazine_home {
+        background-image: url('../images/magazine_media_img.png');
+        
+        .breadcrumb {
+            padding-top: 9px;
+            padding-bottom: 14px;
+            ul {
+                li {
+                    a, span {
+                        font-size: 11px;
+                    }
+                }
+            }
+        }
+
+        .main_container {
+            .magazine_home_in {
+                padding-bottom: 23px;
+                h1 {
+                    font-size: 24px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 26px;
+                    padding-bottom: 9px;
+                    margin-bottom: 0;
+                }
+
+                .magazine_date {
+                    font-size: 12px;
+                    margin-bottom: 10px;
+                }
+
+                p {
+                    font-size: 12px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 18px; 
+                }
+            }
+
+        }
+    }
+    .main_container {
+        .magazine_text {
+            margin-bottom: 50px;
+            margin-top: 23px;
+            p {
+                font-size: 12px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 18px; 
+                margin-bottom: 27px;
+            }
+
+            p:nth-child(2) {
+                margin-bottom: 20px;
+            }
+    
+            h2 {
+                font-size: 20px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+                margin-bottom: 7px;
+            }
+
+            p {
+                margin-bottom: 19px;
+            }
+
+            h3 {
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+            }
+
+            .magazine_list_title {
+                font-size: 12px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: normal;
+            }
+
+            ul, ol {
+                li {
+                    font-size: 12px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 17px;
+                }
+            }
+        }
+    }
+}
