--- a/html/css/style.scss
+++ b/html/css/style.scss
@@ -150,6 +150,7 @@
     }
 }
 .magazine_text {
+    margin-bottom: 57px;
     margin-top: 60px;
     p {
         color: #0B1F33;
@@ -159,7 +160,63 @@
         font-weight: 400;
         line-height: 27px;
         margin-bottom: 34px;
+
+        span {
+            color: #1D5DEB;
+        }
     }
+
+    h3 {
+        color: $main_text;
+        font-family: $Factor;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    }
+
+    .img_bottom_img {
+        margin-bottom: 40px;
+        padding: 9px 15px;
+        color: $main_text;
+        font-family: $Factor;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 27px; /* 168.75% */
+        background: linear-gradient(90deg, #FAFBFF 0%, #BECEFF 100%);
+    }
+
+    .magazine_bottom_text {
+        margin-bottom: 30px;
+        max-width: 752px !important;
+    }
+
+    .magazine_list_title, li {
+        display: block;
+        color: $main_text;
+        font-family: $Factor;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        margin-bottom: 5px;
+    }
+
+    ul,ol {
+        margin-bottom: 19px;
+    }
+
+    p {
+        color: $main_text;
+        font-family: $Factor;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 27px; /* 168.75% */
+    }
+
+
 }
 
 
