--- a/pages/magazine.pug
+++ b/pages/magazine.pug
@@ -23,4 +23,39 @@ html(lang="en")
                 p Товарищи! сложившаяся структура организации требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач. Таким образом укрепление и развитие структуры требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач.
                 p Равным образом консультация с широким активом требуют определения и уточнения существенных финансовых и административных условий. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Таким образом реализация намеченных плановых заданий требуют от нас анализа направлений прогрессивного развития.
 
+                h2 Стиль и размер h2-заголовка
+
+                p 
+                    | Идейные соображения 
+                    span высшего порядка,
+                    | а также сложившаяся структура организации в значительной степени обуславливает создание существенных финансовых и административных условий. Повседневная практика показывает, что рамки и место обучения кадров требуют определения и уточнения существенных финансовых и административных условий.
+
+                img(src="./images/magazine_img.png", alt="").w-100
+                p.img_bottom_img Так должна подписываться фотография на бздячей подложке
+
+                h3 Стиль и размер h3-заголовка
+
+                p.magazine_bottom_text Значимость этих проблем настолько очевидна, что рамки и место обучения кадров требуют определения и уточнения новых предложений. Таким образом сложившаяся структура организации требуют определения и уточнения модели развития.
+
+                span.magazine_list_title Стиль маркированного списка:
+
+                ul 
+                    li —  Значимость этих проблем настолько очевидна
+
+                    li —  Разнообразный и богатый опыт
+
+                    li —  Ссоответствует насущным потребностям
+
+                span.magazine_list_title Стиль нумерованного списка:
+
+                ol 
+                    li 1. Значимость этих проблем настолько очевидна
+
+                    li 2. Разнообразный и богатый опыт
+                    
+                    li 3. Ссоответствует насущным потребностям
+
+                p Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.
+
+
         include ../includes/footer
