--- a/pages/reference.pug
+++ b/pages/reference.pug
@@ -18,7 +18,27 @@ html(lang="en")
                     './images/reference_home_bg.png',
                     ""
                 )
-
-
-        //- Salom
+            .main_container 
+                ul.links.d-flex.flex-column
+                    li 
+                        a(href="#") Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 Правил ДД, он обязан... 
+                    li 
+                        a(href="#") Если Вы не согласны о схемой ДТП и данных в протоколе происшествия 
+                    li 
+                        a(href="#") Каковы самые распространённые ошибки при оформении ДТП 
+                    li 
+                        a(href="#") Что делать, если вы попали в аварию на арендованном автомобиле 
+                    li 
+                        a(href="#") Что входит в перечень обязанностей аварийного комиссара
+                
+                .main_title Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 #[br] Правил ДД, он обязан...
+                .main_description Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.
+                .main_title Если Вы не согласны о схемой ДТП и данных в протоколе происшествия
+                .main_description Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.
+                .main_title Каковы самые распространённые ошибки при оформении ДТП
+                .main_description Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.
+                .main_title Что делать, если вы попали в аварию на арендованном автомобиле
+                .main_description Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.
+                .main_title Что входит в перечень обязанностей аварийного комиссара
+                .main_description.last_main_description Оплата услуг по тарифу «Минимум» производится непосредственно на месте аварийному комиссару наличными или картой. Оплата по тарифу «Стандарт» и услуг по тарифу «Максимум» по эвакуации, помощи со страховыми выплатами и ремонтом после ДТП возможна: наличными, картой, по счету.
         include ../includes/footer
