--- a/html/css/parts/_header.scss
+++ b/html/css/parts/_header.scss
@@ -74,6 +74,7 @@
         background: #FFF;
         box-shadow: 0px 4px 30px 0px #BFCEFF;
         padding: 26px 16px 12px 30px;
+        z-index: 10;
 
         .menu_close {
             position: absolute;
