--- a/html/css/parts/_main.scss
+++ b/html/css/parts/_main.scss
@@ -10,8 +10,8 @@
 *,
 :after,
 :before {
-    -webkit-box-sizing: inherit;
-    box-sizing: inherit;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 img {
