--- a/html/css/parts/_media.scss
+++ b/html/css/parts/_media.scss
@@ -6,6 +6,14 @@
             }
         }
     }
+
+    #chapter {
+        .chapter_cards {
+            .card_item {
+                width: calc(100% / 2 - 45px / 2);
+            }
+        }
+    }
 }
 
 @media only screen and (max-width: 992px) {
@@ -42,7 +50,7 @@
                 margin-bottom: 10px;
             }
 
-            .description {
+            .description, .description a {
                 font-size: 12px;
                 line-height: 18px;
                 margin-bottom: 16px;
@@ -56,6 +64,398 @@
             font-size: 80px;
             line-height: 20.049px;
             margin-bottom: 15px;
+        }
+    }
+
+    #reference {
+        .links {
+            padding-top: 23px;
+            padding-bottom: 30px;
+
+            li {
+                margin-bottom: 15px;
+            }
+            
+            a {
+                font-size: 12px;
+                line-height: 0px;
+            }
+        }
+
+        .main_title {
+            font-size: 20px;
+        }
+
+        .main_description {
+            font-size: 12px;
+            line-height: 18px;
+            margin-bottom: 21px;
+        }
+
+        .last_main_description {
+            margin-bottom: 50px;
+        }
+    }
+
+    #journal {
+        .journal_cards {
+            .card_item {
+                width: calc(50% - 22px);
+            }
+        }
+    }
+
+    #examples {
+        .example_main_container {
+            overflow: hidden;
+        }
+
+        .card_1 {
+            overflow: visible;
+            margin-bottom: 18px;
+            
+            .card_content {
+                border-radius: 15px;
+                overflow: hidden;
+                background: linear-gradient(90deg, #FAFBFF 0%, #BECEFF 100%);
+
+                img {
+                    width: 100%;
+                    height: 188px;
+                    object-fit: cover;
+                }
+
+                .text {
+                    color: #0B1F33;
+                    font-family: "Factor A", sans-serif;
+                    font-size: 12px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 18px;
+                    padding: 10px 10px 21px;
+                }
+            }
+        }
+
+        .example_card_1_pagination {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            margin-bottom: 86px;
+
+            span {
+                margin: 0;
+                padding: 0;
+                width: 10px;
+                height: 10px;
+                background: #DFE6FE;
+                opacity: 1;
+            }
+
+            .swiper-pagination-bullet-active {
+                background: #1D5DEB;
+            }
+        }
+    }
+
+    #price {
+        .text_wrapper {
+            flex-direction: column;
+
+            .text_left, .text_right {
+                width: 100%;
+            }
+        }
+    }
+
+    #prices {
+        .cards {
+            .card_item {
+                width: calc(50% - 26px);
+            }
+        }
+    }
+
+    #rates {
+        .cards {
+            gap: 20px;
+            
+            .card_item {
+                width: 100%;
+            }
+
+            .card_number {
+                display: none;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #chapter {
+        .chapter_cards {
+            margin-top: 43px;
+            margin-bottom: 50px;
+            gap: 20px;
+
+            .card_item {
+                width: 100%;
+
+                .card_title {
+                    font-size: 14px;
+                }
+
+                ul li {
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+    
+    #contact {
+        .address {
+            margin-bottom: 27px;
+
+            .title {
+                font-size: 20px;
+                margin: 23px 0 20px;
+            }
+
+            .address_data {
+                gap: 20px;
+            }
+
+            .address_name {
+                font-size: 12px;
+                line-height: 18px;
+            }
+
+            .address_value {
+                font-size: 12px;
+                line-height: 18px;
+                display: block;
+            }
+        }
+
+        .map iframe {
+            height: 274px;
+        }
+
+        .contact_card {
+            margin: 20px 0 50px;
+        }
+    }
+
+    #clients {
+        .clients_container {
+            padding-top: 23px;
+            padding-bottom: 30px;
+        }
+
+        .main_title {
+            font-size: 20px;
+        }
+
+        .main_description {
+            font-size: 12px;
+            line-height: 18px;
+            margin-bottom: 20px;
+        }
+    }
+
+    #journal {
+        .journal_cards {
+            gap: 15px;
+            margin-top: 50px;
+            margin-bottom: 50px;
+
+            .card_item {
+                width: 100%;
+
+                img {
+                    height: 141px;
+                }
+
+                .card_item_body {
+                    .date {
+                        font-size: 11px;
+                    }
+
+                    .card_description {
+                        font-size: 12px;
+                        line-height: 18px;
+                    }
+                }
+            }
+        }
+    }
+
+    #examples {
+        .tab {
+            gap: 30px;
+            
+            a {
+                font-size: 12px;
+            }
+
+            a.active {
+                font-size: 12px;
+                padding: 0px 15px;
+            }
+        }
+
+        .main_title {
+            font-size: 20px;
+            margin-bottom: 4px;
+        }
+
+        .main_description {
+            font-size: 12px;
+            line-height: 18px;
+            margin-bottom: 26px;
+        }
+
+        .card_wrapper {
+            gap: 20px;
+            margin-bottom: 50px;
+
+            .card_item {
+                width: 100%;
+
+                img {
+                    height: 176px;
+                }
+
+                .example_card_2_pagination {
+                    top: 141px;
+                    height: 10px;
+
+                    span {
+                        min-width: 10px;
+                        height: 10px;
+                    }
+                }
+
+                .text {
+                    font-size: 12px;
+                    line-height: 18px;
+                }
+            }
+        }
+    }
+
+    #price {
+        .text_wrapper {
+            margin: 23px auto 50px;
+            gap: 30px;
+
+            .description {
+                font-size: 12px;
+                line-height: 18px;
+            }
+
+            .main_title {
+                font-size: 20px;
+            }
+
+            .main_title_2 {
+                font-size: 16px;
+            }
+
+            .text_left {
+                ul, ol {
+                    li {
+                        font-size: 12px;
+                    }
+                }
+            }
+
+            .data_list {
+                margin-bottom: 30px;
+                margin-top: 0;
+
+                .datas {
+                    gap: 30px;
+                    padding: 10px 20px;
+
+                    .data_name {
+                        font-size: 12px;
+                    }
+
+                    .data_value {
+                        font-size: 12px;
+                        white-space: nowrap;
+                    }
+                }
+            }
+
+            .links {
+                margin-right: 40px;
+
+                a {
+                    font-size: 12px;
+                    line-height: 18px;
+                }
+            }
+        }
+    }
+
+    #prices {
+        .cards {
+            gap: 20px;
+            padding-top: 50px;
+            padding-bottom: 40px;
+
+            .card_item {
+                width: 100%;
+
+                .card_text {
+                    min-height: 88px;
+                }
+
+                .text_title {
+                    font-size: 12px;
+                    margin-bottom: 0;
+                }
+
+                .text_subtitle {
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+
+    #rates {
+        .cards {
+            padding-top: 50px;
+            padding-bottom: 40px;
+
+            .card_title {
+                font-size: 20px;
+                margin-bottom: 6px;
+            }
+    
+            .card_content {
+                padding: 40px 35px 40px 21px;
+            }
+    
+            .card_alert {
+                width: 117px;
+                height: 27px;
+                font-size: 12px;
+            }
+    
+            .card_subtitle {
+                font-size: 12px;
+                margin-bottom: 24px;
+            }
+    
+            ul {
+                li {
+                    font-size: 12px;
+                }
+            }
         }
     }
 }
