--- a/includes/head.pug
+++ b/includes/head.pug
@@ -4,5 +4,6 @@ head
     title Document
     link(rel="stylesheet", href="./fonts/FactorA/stylesheet.css")
     link(rel="stylesheet", href="./fonts/DINPro/stylesheet.css")
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     link(rel="stylesheet", href="./css/bootstrap.css")
     link(rel="stylesheet", href="./css/style.css")
