--- a/pages/service.pug
+++ b/pages/service.pug
@@ -39,4 +39,135 @@ html(lang="en")
                     b услуги ремонта после ДТП
                     | еще более выгодно
 
+        section.real_company 
+            .main_container 
+                h2 Полностью легальная и реальная компания
+                p Служба аварийных комиссаров «50-50-50» — полностью локальная калининградская компания с реальным, а не фейковым офисом, опытом, людьми, отзывами и сданными делами.
+
+                .real_company_cards 
+                    .real_company_card 
+                        img(src="./images/real_company1.svg", alt="")
+                        h5 Юрлицо
+                        p ИП Кириченко Сергей Викторович
+                            br
+                            | ИНН 390500303344
+                            br
+                            | ОГРНИП 31039251660004
+                        a(href="#") Проверить
+                    .real_company_card 
+                        img(src="./images/real_company2.svg", alt="")
+                        h5 Юрлицо
+                        p ИП Кириченко Сергей Викторович
+                            br
+                            | ИНН 390500303344
+                            br
+                            | ОГРНИП 31039251660004
+                        a(href="#") Проверить
+                    .real_company_card 
+                        img(src="./images/real_company3.svg", alt="")
+                        h5 Юрлицо
+                        p ИП Кириченко Сергей Викторович
+                            br
+                            | ИНН 390500303344
+                            br
+                            | ОГРНИП 31039251660004
+                        a(href="#") Проверить
+
+                .bg_number 50-50-50
+
+        section.advantages 
+            .main_container 
+                h2 Наши преимущества — это ваше удобство
+                .advantages_in 
+                    .advantages_card 
+                        img(src="./images/advantages_card1.svg", alt="")
+                        h4 Скорость
+                        p Чтобы быстро прибыть на место ДТП «стоим» во всех районах города.
+                    .advantages_card 
+                        img(src="./images/advantages_card2.svg", alt="")
+                        h4 Ремонт после ДТП
+                        p Оформим ДТП, прожмем страховую, отремонтируем.
+                    .advantages_card 
+                        img(src="./images/advantages_card3.svg", alt="")
+                        h4 Гарантии
+                        p На все услуги мы даём гарантию, как фактическую, так и человеческую.
+
+        section.about_services 
+            .main_container 
+                .bg_number 50-50-50
+                h2 Где узнать больше о нас и наших услугах?
+                p Пожалуйста, ознакомьтесь с нашими публикациями на ведущих региональных новостных и аналитических СМИ. Они помогут Вам узнать больше о нас и о наших услугах.
+
+                .about_services_in 
+                    a(href="#")
+                        img(src="./images/services1.png", alt="")
+                    a(href="#")
+                        img(src="./images/services2.png", alt="")
+                    a(href="#")
+                        img(src="./images/services3.png", alt="")
+                    a(href="#")
+                        img(src="./images/services4.png", alt="")
+                    a(href="#")
+                        img(src="./images/services5.png", alt="")
+                    a(href="#")
+                        img(src="./images/services6.png", alt="")
+                    a(href="#")
+                        img(src="./images/services7.png", alt="")
+                    a(href="#")
+                        img(src="./images/services8.png", alt="")
+                    a(href="#")
+                        img(src="./images/services9.png", alt="")
+                    a(href="#")
+                        img(src="./images/services10.png", alt="")
+                    a(href="#")
+
+        section.newsline 
+            .main_container 
+                .bg_number.bg_number_one 50-50-50
+
+                .bg_number 50-50-50
+
+                h2 Лента новостей
+
+                span 20.10.2023
+                p Аварийный комиссар в Калининграде о порядке действий при ДТП
+
+                span 20.10.2023
+                p Юридическое сопровождение при ДТП в Калининграде от аварийных комиссаров
+
+                span 20.10.2023
+                p Услуги аварийного комиссара в Калининграде
+
+                span 20.10.2023
+                p Калининградская служба аварийных комиссаров рассказывает, что делать, если виновник ДТП скрылся
+
+                span 20.10.2023
+                p Аварийный комиссар в Калининграде о порядке действий при ДТП
+
+                a(href="#").newsline_link Еще 
+
+        section.emergency 
+            .main_container 
+                h2 Журнал аварийного комиссара
+                p Уникальный проект не имеющий аналогов в России. Ведем позновательный журнал о жизни на дорогах Калининграда. Разбираем ситуации, даём советы, констатируем факты.
+
+                .emergency_cards 
+                    .emergency_card 
+                        .emergency_img 
+                            img(src="./images/emergency_card_new.png", alt="")
+                        span 20.11.2020
+                        p Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в Калининграде о порядке. 
+                    .emergency_card 
+                        .emergency_img 
+                            img(src="./images/emergency_card_new.png", alt="")
+                        span 20.11.2020
+                        p Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в
+                    .emergency_card 
+                        .emergency_img 
+                            img(src="./images/emergency_card_new.png", alt="")
+                        span 20.11.2020
+                        p Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в
+                
+                a(href="#").emergency_link Весь журнал 
+
         include ../includes/footer
