--- a/html/css/style.scss
+++ b/html/css/style.scss
@@ -286,7 +286,375 @@
     }
 }
 
+.real_company {
+    overflow: hidden;
+    background: linear-gradient(90deg, #FAFBFF 0%, #BECEFF 100%);
+    .main_container {
+        position: relative;
+        padding-top: 101px;
+        h2 {
+            max-width: 864px;
+            margin: 0 auto 10px auto;
+            color: $main_text;
+            text-align: center;
+            font-family: $Factor;
+            font-size: 40px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+            margin-bottom: 10px;
+        }
 
+        p {
+            max-width: 854px;
+            margin: 0 auto 38px auto;
+            color: $main_text2;
+            text-align: center;
+            font-family: $Factor;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 27px; /* 168.75% */
+        }
+        
+        .real_company_cards {
+            position: relative;
+            z-index: 2;
+            padding-bottom: 133px;
+            display: flex;
+            align-items: center;
+            gap: 44px;
+            justify-content: space-between;
+            .real_company_card {
+                flex: 1;
+                padding: 25px 33px 30px 33px;
+                border-radius: 12px;
+                background: #FFF;
+                
+                h5 {
+                    color: #0B1F33;
+                    font-family: $Factor;
+                    font-size: 18px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 27px;
+                    margin-top: 20px;
+                    margin-bottom: 13px;
+                }
+
+                p {
+                    text-align: left;
+                    color: #757F88;
+                    font-family: $Factor;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 27px;
+                    margin-bottom: 25px;
+                }
+
+                a {
+                    cursor: pointer;
+                    color: #FFF;
+                    text-align: center;
+                    font-family: $Factor;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 27px;
+                    padding: 7px 17px;
+                    border-radius: 8px;
+                    background: #0D4CD3;
+                }
+            }
+        }
+
+        .bg_number {
+            color: #FFF;
+            font-family: "DIN Pro", sans-serif;
+            font-size: 290.534px;
+            font-style: normal;
+            font-weight: 900;
+            line-height: 20.049px;
+            text-transform: uppercase;
+            position: absolute;
+            width: 100%;
+            opacity: 0.5;
+            bottom: 68px;
+            white-space: nowrap;
+        }
+    }
+}
+
+.advantages {
+    .main_container {
+        padding: 100px 0;
+        h2 {
+            color: $main_text;
+            text-align: center;
+            font-family: $Factor;
+            font-size: 40px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+            margin-bottom: 70px;
+        }
+
+        .advantages_in {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 69px;
+
+            .advantages_card {
+                max-width: 290px;
+                text-align: center;
+                h4 {
+                    margin: 20px 0 13px 0;
+                    color: $main_text;
+                    font-family: $Factor;
+                    font-size: 18px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 27px;
+                }
+
+                p {
+                    color: #757F88;
+                    font-family: $Factor;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 27px; 
+                }
+            }
+        }
+    }
+}
+
+.about_services {
+    background: linear-gradient(90deg, #FAFBFF 0%, #BECEFF 100%);
+    .main_container {
+        position: relative;
+        padding: 100px 0;
+
+        .bg_number {
+            color: #FFF;
+            font-family: "DIN Pro", sans-serif;
+            font-size: 290.534px;
+            font-style: normal;
+            font-weight: 900;
+            line-height: 20.049px;
+            text-transform: uppercase;
+            position: absolute;
+            width: 100%;
+            opacity: 0.5;
+            top: 50px;
+            white-space: 1nowrap;
+        }
+
+        h2 {
+            position: relative;
+            z-index: 2;
+            color: $main_text;
+            text-align: center;
+            font-family: $Factor;
+            font-size: 40px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+            margin-bottom: 10px;
+        }
+        p {
+            position: relative;
+            z-index: 2;
+            margin: 0 auto;
+            max-width: 722px;
+            color: #757F88;
+            text-align: center;
+            font-family: $Factor;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 27px;
+        }
+
+        .about_services_in {
+            margin-top: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 26px;
+
+            a {
+                width: calc(100% /5 - 26px);
+                display: flex;
+                    img {
+                        width: 100%;
+                    }
+            }
+        }
+    }
+}
+
+.newsline {
+    padding: 99px 0 111px 0;
+    background: linear-gradient(90deg, #FAFBFF 0%, #BECEFF 100%);
+    .main_container {
+        position: relative;
+        text-align: center;
+        .bg_number {
+            color: #FFF;
+            font-family: "DIN Pro", sans-serif;
+            font-size: 290.534px;
+            font-style: normal;
+            font-weight: 900;
+            line-height: 20.049px;
+            text-transform: uppercase;
+            transform: rotate(-90deg);
+            position: absolute;
+            width: 100%;
+            opacity: 0.5;
+            bottom: -65px;
+            right: 0;
+            white-space: 1nowrap;
+        }
+        h2 {
+            color: $main_text;
+            font-family: $Factor;
+            font-size: 40px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+            margin-bottom: 40px;
+        }
+
+        span {
+            color: #757F88;
+            font-family: $Factor;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 27px;
+        }
+
+        p {
+            color: #0B1F33;
+            font-family: $Factor;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 27px; /* 168.75% */
+            margin-bottom: 25px;
+        }
+
+        .newsline_link {
+            padding: 7px 22px;
+            border-radius: 8px;
+            background: #0D4CD3;
+            color: #FFF;
+            font-family: $Factor;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 27px; /* 168.75% */
+        }
+
+        
+    }
+}
+
+.emergency {
+    .main_container {
+        padding: 100px 0 0 0;
+        h2 {
+            color: $main_text;
+            text-align: center;
+            font-family: $Factor;
+            font-size: 40px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+        }
+
+        p {
+            max-width: 722px;
+            margin: 0 auto 45px auto;
+            color: #757F88;
+            text-align: center;
+            font-family: $Factor;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 27px;
+        }
+
+        .emergency_cards {
+            display: flex;
+            align-items: start;
+            justify-content: center;
+            gap: 44px;
+            .emergency_card {
+                max-width: 371px;
+                border-radius: 15px;
+                overflow: hidden;
+                background: linear-gradient(90deg, #FAFBFF 0%, #BECEFF 100%);
+
+                .emergency_img {
+                    width: 100%;
+                    height: 188px;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+
+                span {
+                    display: block;
+                    padding-top: 14px;
+                    padding-left: 20px;
+                    color: #757F88;
+                    font-family: $Factor;
+                    font-size: 14px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 27px; /* 192.857% */
+                }
+
+                p {
+                    padding-left: 20px;
+                    text-align: left;
+                    margin-top: 18px;
+                    color: #0B1F33;
+                    font-family: $Factor;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 27px;
+                    margin-bottom: 14px;
+                }
+            }
+        }
+
+        .emergency_link {
+            width: 141px;
+            margin: 45px auto 90px auto;
+            display: block;
+            padding: 7px 21px;
+            color: #FFF;
+            text-align: center;
+            font-family: $Factor;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 27px;
+            border-radius: 8px;
+            background: #0D4CD3;
+        }
+    }
+}
 
 @import './parts/footer';
 @import './parts/media';
